[gd_scene load_steps=2 format=3 uid="uid://cqidbgsrqms1c"]

[ext_resource type="Script" uid="uid://dagb5b5fjj1y1" path="res://blackjack_test.gd" id="1_157hr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 15.0
offset_top = 44.0
offset_right = 55.0
offset_bottom = 84.0
script = ExtResource("1_157hr")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 91.0
offset_right = 83.0
offset_bottom = 114.0
text = "Score: 0"

[node name="TotalScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = -20.0
offset_right = 145.0
offset_bottom = 3.0

[node name="CardContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 50.0
offset_right = 92.0
offset_bottom = 90.0

[node name="DrawButton" type="Button" parent="."]
layout_mode = 0
offset_top = 123.0
offset_right = 50.0
offset_bottom = 154.0
text = "Draw"

[node name="HoldButton" type="Button" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 123.0
offset_right = 107.0
offset_bottom = 154.0
text = "Hold"

[node name="ResultLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 2.0
offset_right = 75.0
offset_bottom = 25.0
text = "\"\""

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="DrawButton" to="." method="_on_DrawButton_pressed"]
[connection signal="pressed" from="HoldButton" to="." method="_on_HoldButton_pressed"]
